[gd_scene load_steps=3 format=3 uid="uid://1pjw4u0ygl5p"]

[ext_resource type="Script" uid="uid://ciid3eva2ycqs" path="res://scripts/interacting_component.gd" id="1_ofc3v"]

[sub_resource type="CircleShape2D" id="CircleShape2D_omdnv"]
radius = 76.23647

[node name="InteractingComponent" type="Node2D"]
script = ExtResource("1_ofc3v")

[node name="InteractRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractRange"]
shape = SubResource("CircleShape2D_omdnv")

[node name="InteractLabel" type="Label" parent="."]
offset_left = -75.0
offset_top = 73.0
offset_right = 74.0
offset_bottom = 96.0
text = "F to Open Skill Tree"
horizontal_alignment = 1
